--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <style media="screen">
+            html, body {
+                height: 100%;
+            }
+        </style>
     </head>
     <body>
         <div id="app"></div>
