--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <title></title>
         <style media="screen">
             html, body {
-                height: 100%;
+                /*height: 100%;*/
             }
         </style>
     </head>
